fix margin projets and flex wrap apps icons

--- a/src/templates/Project/project.scss
+++ b/src/templates/Project/project.scss
@@ -2,7 +2,7 @@
 
 .project {
 	&_container {
-		margin: 5% 0% 5% 0%;
+		margin: 15% 0% 5% 0%;
 		display: flex;
 		flex: 1;
 		flex-direction: column;
@@ -11,6 +11,9 @@
 		margin-right: auto;
 		@include respond-to("medium") {
 			width: 60%;
+		}
+		@include respond-to("small") {
+			margin: 5% 0% 5% 0%;
 		}
 	}
 
@@ -108,6 +111,7 @@
 		flex-direction: row;
 		align-items: center;
 		justify-content: center;
+		flex-wrap: wrap;
 	}
 
 	&_buttons {
